// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Linear/Time charts font color is white with a dark background color 1`] = `
{
  "background": "#010101",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            {
              "x": "19",
              "y": 11,
            },
            {
              "x": "18",
              "y": 12,
            },
            {
              "x": "17",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "10",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "19",
        "18",
        "17",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": "#010101",
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#FFFFFF",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#FFFFFF",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "callback": [Function],
            "color": "#FFFFFF",
            "padding": 5,
          },
          "title": undefined,
          "type": "linear",
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#FFFFFF",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`Linear/Time charts snapshot test of chartJS configuration for date chart 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            {
              "x": "1/19/1900",
              "y": 10,
            },
            {
              "x": "1/18/1900",
              "y": 11,
            },
            {
              "x": "1/17/1900",
              "y": 12,
            },
            {
              "x": "1/16/1900",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "Series 1",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "1/19/1900",
        "1/18/1900",
        "1/17/1900",
        "1/16/1900",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "maxTicksLimit": 15,
            "padding": 5,
          },
          "time": {
            "displayFormats": {
              "day": "M/d/yyyy",
            },
            "parser": "M/d/yyyy",
            "unit": "day",
          },
          "title": undefined,
          "type": "time",
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`Linear/Time charts snapshot test of chartJS configuration for linear chart 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            {
              "x": "20",
              "y": 10,
            },
            {
              "x": "19",
              "y": 11,
            },
            {
              "x": "18",
              "y": 12,
            },
            {
              "x": "17",
              "y": 13,
            },
          ],
          "fill": false,
          "label": "Series 1",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "20",
        "19",
        "18",
        "17",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
          "type": "linear",
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create a chart with stacked bar 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#FFFFFF",
          "borderWidth": 1,
          "data": [
            30,
          ],
          "label": "P4",
          "xAxisID": "x",
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "indexAxis": "x",
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "horizontal": undefined,
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": true,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": true,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "bar",
  },
}
`;

exports[`datasource tests create chart with a dataset of one cell (no title) 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            30,
          ],
          "fill": false,
          "label": "Series 1",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets with category title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with column datasets without series title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "Series 1",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "Series 2",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with only the dataset title (no data) 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with rectangle dataset 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "label": "first column dataset",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "label": "second column datase…",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "first row dataset",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "second row dataset",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets with category title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "first row dataset",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "second row dataset",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;

exports[`datasource tests create chart with row datasets without series title 1`] = `
{
  "background": "#FFFFFF",
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            30,
            31,
            32,
          ],
          "fill": false,
          "label": "Series 1",
          "pointBackgroundColor": "#4EA7F2",
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            40,
            41,
            42,
          ],
          "fill": false,
          "label": "Series 2",
          "pointBackgroundColor": "#EA6175",
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
        "P5",
        "P6",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 0,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "chartShowValuesPlugin": {
          "background": undefined,
          "callback": [Function],
          "showValues": undefined,
        },
        "legend": {
          "labels": {
            "color": "#000000",
            "generateLabels": [Function],
          },
          "onClick": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#000000",
          "display": true,
          "font": {
            "size": 22,
            "style": "normal",
            "weight": "normal",
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "label": [Function],
            "title": [Function],
          },
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "platform": undefined,
    "plugins": [],
    "type": "line",
  },
}
`;
